--- a/clarifai-android-starter/build.gradle
+++ b/clarifai-android-starter/build.gradle
@@ -4,7 +4,7 @@ buildscript {
   }
   dependencies {
     classpath(
-        "com.android.tools.build:gradle:2.2.0",
+            'com.android.tools.build:gradle:2.2.1',
         "com.neenbedankt.gradle.plugins:android-apt:1.8",
     )
   }
